# reading-notes

./: 201-class-01.md  201-class-09.md  201-class-10.md  201-class-11.md  301-class-01.md  301-class-03.md  301-class-04.md  301-class-05.md  301-class-07.md  301-class-12.md  301-class-14.md  301-class-15.md  401-js-class-01.md  README.md  class-01.md  class-02.md  class-03.md  class-04.md  class-05.md  class-06.md  class-07.md  class-08.md  class-09.md  class-10.md  class-11.md  class-12.md  class-13.md  class-14.md  class-14a.md  class-14b.md  class-15.md  index.md  pyproject.toml
201/: 201-class-03.md  201-class-05.md  201-class-06.md  201-class-07.md  201-class-08.md  201-class-13.md
301/: 301-class-02.md  301-class-03.md  301-class-06.md  301-class-08.md  301-class-09.md  301-class-10.md  301-class-11.md  301-class-13.md
ds&a/: O(n).md  (+10 more)
python/: api-deploy.md  api-integration.md  auth-production-server.md  automation.md  beginner-big-O.md  classes-objects.md  cryptography.md  data-analysis.md  data-science.md  data-types.md  data-vis.md  dict.md  dj-rest-docker.md  django-crud-forms.md  django-custom-user.md  django-models.md  django.md  dunder-methods.md  ethics.md  file-and-exceptions.md  game-of-greed-2.md  game-of-greed-3.md  game-of-greed.md  linear-regressions.md  open-source.md  pandas.md  permissions-psql.md  pre-work-advanced.md  pre-work.md  py-react-2.md  py-react-3.md  py-react-4.md  py-react.md  pyproject.toml  pytest-fix-cov.md  pytest-two.md  pytest.md  python-tdd.md  pythonisms.md  statistics-probability.md  (+1 more)
python/j-notebooks/: automation.ipynb
(+53 files in other folders)
